# OPNMIDI-Player-Java

./: .travis.yml  LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: android-ci.yml
OPNMIDI-Player/: CMakeLists.txt  build.gradle  proguard-rules.pro
OPNMIDI-Player/icon/: descr.xcf
OPNMIDI-Player/src/main/: AndroidManifest.xml
OPNMIDI-Player/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opnmidi-jni.c  update.sh
OPNMIDI-Player/src/main/cpp/OPNMIDI/: opnmidi_mus2mid.c
OPNMIDI-Player/src/main/cpp/include/: opnmidi.h
OPNMIDI-Player/src/main/cpp/src/: opnmidi.cpp  opnmidi_load.cpp  opnmidi_midiplay.cpp  opnmidi_midiplay.hpp
OPNMIDI-Player/src/main/cpp/src/chips/mamefm/: 2608intf.h
OPNMIDI-Player/src/main/cpp/src/chips/np2/: fmgen_file.h  fmgen_fmgen.cpp  fmgen_fmgen.h  fmgen_fmgeninl.h  fmgen_psg.h
OPNMIDI-Player/src/main/cpp/src/chips/nuked_lle/: fmopn2.c
OPNMIDI-Player/src/main/java/ru/wohlsoft/opnmidiplayer/: AppSettings.java  HardButtonReceiver.java  OpenFileDialog.java  Player.java  PlayerService.java
OPNMIDI-Player/src/main/res/layout/: activity_player.xml
OPNMIDI-Player/src/main/res/values/: ic_launcher_background.xml  strings.xml
OPNMIDI-Player/src/main/res/values-en/: strings.xml
OPNMIDI-Player/src/main/res/values-fr/: strings.xml
OPNMIDI-Player/src/main/res/values-ru/: strings.xml
app/src/main/res/layout/: activity_player.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-ru/: strings.xml
fastlane/metadata/android/de/: short_description.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/ru/: short_description.txt
gradle/wrapper/: gradle-wrapper.properties
